Closed Bug 25073 Opened 25 years ago Closed 25 years ago

radio buttons besides the first selected don't check

Categories

(Core :: XUL, defect, P3)

x86
Other
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: jlarsen, Assigned: eric)

References

()

Details

(Keywords: regression, Whiteboard: [PDT+])

In XUL3.XUL in the first group of radio type menu options, the first one is set to true, but I believe should become unselected once another radio button of same group becomes selected, it doesn't.
Changing component to XUL and re-assigning to David...
Assignee: nisheeth → hyatt
Component: XML → XP Toolkit/Widgets: XUL
QA Contact: chrisd → paulmac
Status: NEW → ASSIGNED
Target Milestone: M14
Target Milestone: M14 → M15
Pink, you sexy bitch, I'm giving this one to you. Some kind of bug in the radio menu code in the XP menus.
Assignee: hyatt → pinkerton
Status: ASSIGNED → NEW
accepting for postbeta.
Status: NEW → ASSIGNED
the mac radio menus are beta, nominating this as well
Keywords: beta1
Target Milestone: M15 → M14
Putting on the PDT+ radar for beta1.
Whiteboard: [PDT+]
fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified with windows, linux and mac commercial builds (2000022308m14).
Status: RESOLVED → VERIFIED
ok, this doesn't work anymore. someone must have regressed it! reopening.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
reaccepting. grumble.
Status: REOPENED → ASSIGNED
*** Bug 29661 has been marked as a duplicate of this bug. ***
Eric, hyatt and I have traced this to some problem with incremental reflow with images and boxes in the menu code. By setting other styles (bg color, for example) on the selected radio item, we were able to verify that all the attributes are correctly set in the c++. It is now just a reflow/style bug but we don't know that code at all. This probably regressed with your big landing last week as it wored for sure (and was verified, even!) THis probably also has something to do with the fact that mousing over menu items with a ">" image in them is very very slow. SImply removing that image style change in CSS makes things very fast again with no change in the c++ or functionality of the menu. That bug is 29979. Reassigning to you.
Assignee: pinkerton → evaughan
Status: ASSIGNED → NEW
Keywords: regression
Summary: true radio button, does not uncheck in menubar → radio buttons besides the first selected don't check
fixed
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
spam: QA contact to jrgm (PDT+ resolved to be verified)
QA Contact: paulmac → jrgm
verified fixed on opt comm bits for win98 2000030709 mac 8.6 2000030708 linux 2.2 2000030709
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.