Fix for bug 25073. groupName for radio button items was not being set initially if the item was checked in the content model when the frame was created. Now always make sure we set that member. r=hyatt a=rickg